# chess-ai

./: .gitignore  Board_Scorer.c  Board_Scorer.html  Board_Scorer.py  Board_Scorer.pyx  Minimax.py  Opening_Book.py  PyGameWrapper.py  README.md  basic.py  main.py  old_profile.prof  profile.prof  pygame_wrapper.py  requirements.txt  rust_minimax.py  setup.py  socket_interface.py  test_cython.c  test_cython.py  threefold_draw.pgn  transposition_table.py  wrapper.prof
cpp-engine/: a.out  b_score.cpp  b_score.h  board.cpp  board.h  board_file.txt  diff_finder.py  engine.cpp  evaluator.cpp  evaluator.h  malloc_error_break.gdb  minimax.cpp  minimax.h  output_file.txt  perft-test.py  perft_test.cpp  readout1.txt  readout2.txt  tt_table.cpp
legacy_code/: hashed_table.p  minimax.py  pygame_wrapper.py
rust_minimax/: Cargo.toml
rust_minimax/src/: board.rs  cloned.txt  lichess_api.rs  main.rs  minimax.rs  og.txt  reorder.py  sample.txt  seed_nums.txt  tests.rs
src/: Game.py  output_file.txt
src/cpp_engine/: a.out  board.cpp  board.h  engine.cpp  evaluator.cpp  evaluator.h  minimax.cpp  minimax.h  output_file.txt  perft-test.py  perft_test.cpp  perft_test.h  tt_table.cpp  tt_table.h
src/python_engine/: Minimax.py  Opening_Book.py
src/thc_testing/: a.out  engine.cpp  evaluator.cpp  evaluator.h  minimax.cpp  minimax.h  thc.h  tt_table.cpp  tt_table.h
src/thc_testing/demos/: demo.cpp  perft_test.cpp
