[package]
name = "rust_minimax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_chacha = "0.3.1"
rand_core = "0.6.4"
rand = "0.8.5"
reqwest = {version="0.11.13", features=["json", "stream"]}
tokio = {version="1.22.0", features = ["full"]}
hyper = "0.14.23"
serde_json = "1.0.89"
serde = { version = "1.0.148", features = ["derive"] }
futures-util = "0.3.25"

[profile.release]
debug = true
